--- a/css/print.css
+++ b/css/print.css
@@ -8,8 +8,12 @@
 		size: 105mm 148mm;
 		margin-top: 15mm;
 		margin-bottom: 25mm;
+
 		@bottom-center {
 			content: "– " counter(page) " –";
+		}
+		@footnote {
+			float:bottom;
 		}
 	}
 	
@@ -28,6 +32,7 @@
 	@page:right {
 		margin-right: 20mm;
 		margin-left: 15mm;
+
 		@right-top {
 			content: element(heading);
 			writing-mode: vertical-rl;
@@ -49,9 +54,8 @@
 		}
 	}
 
-
 	body {
-		counter-reset: chapter 1 sidenote 1 figure 1;
+		counter-reset: chapter 1 sidenote 1 footnote 1 figure 1;
 	}
 
 	/* Chapter */
@@ -132,13 +136,31 @@
 
 	/* Sidenotes */
 	.sidenote {
-		font-weight: 600;
+		font-weight: 400;
+		color: teal;
 		counter-increment: sidenote;
 	}
 	.sidenote::before {
 		padding-left: 0.2rem;
 		padding-right: 0.2rem;
-		content: counter(sidenote);
+		content: "(" counter(sidenote);
+	}
+	.sidenote::after {
+		padding-right: 0.2rem;
+		content: ")";
+	}
+
+	/* Footnotes */
+	.footnote {
+		float: footnote;
+		vertical-align:super;
+		font-size: 0.6rem;
+		counter-increment: footnote;
+	}
+
+	.footnote::before {
+		content: counter(footnote);
+		padding-right: 0.3rem;
 	}
 
 	/* Links */
