--- a/css/print.css
+++ b/css/print.css
@@ -156,6 +156,7 @@
 		padding-bottom: 0.3rem;
 		border-left: 3px solid teal;
 		width: 3.6rem;
+		text-align: left;
 		line-height: 1.3;
 		font-size: 0.5rem;
 		font-weight: 400;
