--- a/css/print.css
+++ b/css/print.css
@@ -165,6 +165,7 @@
 		text-align: justify;
 		line-height: var(--line-height);
 		font-variant-ligatures: normal;
+		text-justify: inter-word;
 		orphans: 2; /* currently not supported in Mozilla Firefox (Jun 28, 2020) */
 		widows: 2; /* currently not supported in Mozilla Firefox (Jun 28, 2020 */
 	}
@@ -220,9 +221,11 @@
 
 	/* Footnotes (currently not supported in Paged.js) */
 	.footnote {
+		color: #777;
 		float: footnote;
 		vertical-align: super;
-		font-size: 0.6rem;
+		font-size: 0.5rem;
+		text-justify: none;
 		counter-increment: footnote;
 	}
 
