--- a/css/screen.css
+++ b/css/screen.css
@@ -5,6 +5,7 @@
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
 	hyphens: auto;
+	font-kerning: normal;
 	text-rendering: optimizeLegibility;
 }
 
@@ -13,10 +14,6 @@ section {
 	margin: 0 auto;
 }
 
-h3 {
-	font-size: 2.5rem;
-	line-height: 1.2;
-}
 p.runningTitle {
 	display: none;
 }
