Undo style changes

--- a/css/print.css
+++ b/css/print.css
@@ -7,7 +7,7 @@
 	@page {
 		size: 105mm 148mm;
 		margin-top: 15mm;
-		margin-bottom: 26mm;
+		margin-bottom: 25mm;
 		/* Pagination Area */
 		@bottom-center {
 			content: "– " counter(page) " –";
@@ -121,15 +121,10 @@
 		content: none;
 	}
 	
-	/* Flow Space */
-	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section > * {
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > * {
 		margin-top: 0;
-	}	
-	
-	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section > * + * {
-		margin-top: var(--line-height);
 	}
-	
+
 	/* Headings and Paragraphs */
 	h2.chapterTitle {
 		font-size: 1.2rem;
@@ -150,7 +145,22 @@
 		font-size: 0.9rem;
 	}
 
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h1,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h2,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h3,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h4,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h5,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > h6,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > p,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > ul, 
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter > ol {
+		margin-top: var(--line-height);
+	}
 
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.chapter *:first-child,
+	.pagedjs_page .pagedjs_pagebox .pagedjs_area .pagedjs_page_content section.backmatter *:first-child {
+		margin-top: 0;
+	}
 
 	p {
 		text-align: justify;
@@ -203,7 +213,8 @@
 	a.sidenode-ref-mark {
 		color: teal;
 		text-decoration: none;
-		vertical-align: super;
+		position: relative;
+		top: -0.4rem;
 		font-size: 0.7em;
 		/* font-variant-position: super; *//* not supported in Google Chrome */
 		counter-increment: sidenodeRefMark; /* Own counter to keep mark and term together */
@@ -216,7 +227,8 @@
 	/* Footnotes (currently not supported in Paged.js) */
 	.footnote {
 		float: footnote;
-		vertical-align: super;
+		position: relative;
+		top: -0.4rem;
 		font-size: 0.5rem;
 		text-justify: none;
 		counter-increment: footnote;
