--- a/css/interface-0.1.css
+++ b/css/interface-0.1.css
@@ -85,20 +85,19 @@
     /*--------------------------------------------------------------------------------------*/
 
 
-
     /* uncomment this par to see the baseline : -------------------------------------------*/
 
-    /* 
-    .pagedjs_pagebox {
-        --pagedjs-baseline: 11px;
-        --pagedjs-baseline-position: -4px;
-        --pagedjs-baseline-color: cyan;
+    
+    /* .pagedjs_pagebox {
+        --pagedjs-baseline: 1.28rem;
+        --pagedjs-baseline-position: -11px;
+        --pagedjs-baseline-color: rgba(0, 255, 255, 0.397);
         background: linear-gradient(var(--color-paper) 0%, var(--color-paper) calc(var(--pagedjs-baseline) - 1px), var(--pagedjs-baseline-color) calc(var(--pagedjs-baseline) - 1px), var(--pagedjs-baseline-color) var(--pagedjs-baseline)), transparent;
         background-size: 100% var(--pagedjs-baseline);
         background-repeat: repeat-y;
         background-position-y: var(--pagedjs-baseline-position);
-    } 
-    */
+    }  */
+   
 
     /*--------------------------------------------------------------------------------------*/
 }
